--- a/front_datil_library/src/App.css
+++ b/front_datil_library/src/App.css
@@ -1,6 +1,15 @@
+:root {
+    --main-color: #f3f3f3;
+    --primary-color: #26408a;
+    --secondary-color: white;
+}
+
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import './styles/font.css';
+
 .main-container {
     height: 100vh;
-    background-color: #aaa;
+    background-color: var(--main-color);
 }
 
 .main-container.main-container-flex {
@@ -9,7 +18,7 @@
 
 .main-container .container-login {
     padding: 2rem;
-    background: white;
+    background: var(--secondary-color);
     border-radius: 0.5rem;
 }
 
@@ -20,24 +29,54 @@
 }
 
 .menu-container {
-    width: 200px;
-    background-color: white;
+    width: 230px;
+    background-color: var(--secondary-color);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 
 .menu-container a{
     display: inline-block;
     padding: 1rem;
-    background-color: white;
+    background-color: var(--secondary-color);
     width: 100%;
     box-sizing: border-box;
     cursor: pointer;
-    text-decoration: none;
+    color: var(--primary-color);
 }
 
 .menu-container a:hover{
     background-color: aliceblue;
+    color: var(--primary-color);
 }
 
 .content-container {
     flex-grow: 1;
+}
+
+.content-container-data {
+    margin-top: 1rem;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    border-radius: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+}
+
+table {
+    text-align: center;
+}
+
+a{
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: white;
+}
+
+.toast  {
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
